<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackAtBrown2016</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_choose">Choose</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_question">Question</string>
    <string name="submit_title">Submit a Question</string>
    <string name="title">Title</string>
    <string name="body">Body of question</string>
    <string name="submit">Submit!</string>
    <string name="submitted">Your question has been submitted!</string>
    <string name="goback">Return to main page</string>
    <string name="another">Submit another question</string>
    <string name="tutor">Tutor someone!</string>
    <string name="help">Get help!</string>
    <string name="what">What would you like to do?</string>

</resources>
